--- a/sass/index.scss
+++ b/sass/index.scss
@@ -8,3 +8,7 @@
 
 @import './layots/hero';
 @import './components/buttons';
+
+@import './layots/intro-section';
+
+@import './layots/happiness-section';
