--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -44,7 +44,7 @@
   stroke: #9f53ff;
 }
 
-// .btn {
-//   padding-right: 36px;
-//   padding-left: 36px;
-// }
+.btn {
+  padding-right: 36px;
+  padding-left: 36px;
+}
